Changé l'image du logo de la banière

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -86,7 +86,7 @@ h2 { font-size:1.4rem; text-overflow: ellipsis; overflow: hidden; white-space: n
 <body>
     <div class="jumbotron">
         <div class="container">
-            <img src="documentation/images/home/logo.png" />
+            <img src="/images/logo.png" />
         </div>
     </div>
 
