Mise en forme h1 + logo

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -28,7 +28,7 @@
             padding: 0 20px;
         }
 
-        h1 { margin:24px 24px 14px 24px;}
+        h1 { margin:24px 0 14px 0;}
 h2 { font-size:1.4rem; text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
         .container {
             max-width: 1170px;
