continuer la home

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -37,6 +37,12 @@ h2 { font-size:1.4rem; text-overflow: ellipsis; overflow: hidden; white-space: n
             margin: auto;
         }
 
+        main .container {
+            max-width: 1130px;
+            padding-left: 35px;
+            padding-right: 35px;
+        }
+
         .tiers {
     display:inline-block;
             width: calc(33% - 48px);
@@ -86,7 +92,7 @@ h2 { font-size:1.4rem; text-overflow: ellipsis; overflow: hidden; white-space: n
 <body>
     <div class="jumbotron">
         <div class="container">
-            <img src="/images/logo.png" />
+            <img src="/altazion-commerce-controls/images/logo.png" />
         </div>
     </div>
 
